@@ -1,3 +1,8 @@
 
 2011-06-11
 First version
+
+2011-06-12
+Azure.AjSharp class library
+Include() files from blob container
+
